--- a/Lets Chat_login.html
+++ b/Lets Chat_login.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="Lets Chat_login.js"></script>
 </head>
-<body>
+<body class="body-login">
 <center>
 	<h1 class="header">	
 		Let's Chat	<sup>
