--- a/Lets Chat_room.html
+++ b/Lets Chat_room.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body>
+<body class="body-room">
 <div class="container">
 <button onclick="logout()" id="logout" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
 	<center>
