--- a/Lets Chat_room.html
+++ b/Lets Chat_room.html
@@ -18,23 +18,24 @@
 </head>
 <body class="body-room">
 <div class="container">
-<button onclick="logout()" id="logout" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
+	<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="logout()">Logout</button>
 	<center>
 		<h1 class="header">	
-			Let's Chat	
+			Let's Chat
 			<sup>
 				<img src="m2.png">
 			</sup>
 		</h1>
-		<h3 id='username' class="color_white"></h3>
+		<h3 class="color_white" id="greeting"></h3>
 		<div class="form-group input_div_room_page">
 			<label>#Add Room:</label>
-
+			<input class="form-control" id="room" placeholder="Room Name" type="text">
 		</div>
-		<button onclick="addroom()" class="btn btn-success">#Add Room</button>
+		<button class="btn btn-success" onclick="addroom()">#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
-	  <div id="output"></div>
+	<div id="output"></div>
 	</center>
+</div>
 </div>
 <script src="Lets Chat_room.js"></script>
 </body>
